# SynthCPT

./: .gitignore  README.md  pyproject.toml
entigraph_pipeline/: __init__.py  cli.py  context_graph.py  entity_selection.py  evaluator.py  graph_paths.py  io.py  llm.py  pipeline.py  progress.py  prompts.py  titles.py
evaluate/: probes.jsonl  report.md  rows.jsonl  summary.json
examples/: README.md  compare_generation_quality.py  compare_wiki_fixture.py  run_offline_wiki_pipeline.py  wiki_fixture.jsonl
tests/: test_pipeline.py
